<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="255dp"
    android:layout_height="255dp"
    android:background="#55000000"
    android:clickable="false"
    android:contextClickable="false"
    android:gravity="center"
    android:longClickable="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="225dp"
        android:layout_height="255dp"
        android:layout_gravity="center"
        android:background="@drawable/diagonal_gradient">

        <TextView
            android:id="@+id/txtThemeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pick_theme"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/themeAuto"
            app:layout_constraintEnd_toEndOf="@+id/txtThemeLabel"
            app:layout_constraintStart_toStartOf="@+id/txtThemeLabel"
            app:layout_constraintTop_toBottomOf="@+id/txtThemeLabel">

            <RadioButton
                android:id="@+id/themeAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode_systm"
                android:textColor="@color/text"/>

            <RadioButton
                android:id="@+id/themeLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode_light"
                android:textColor="@color/text"/>

            <RadioButton
                android:id="@+id/themeNight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode_night"
                android:textColor="@color/text"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnPickTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/text"
            app:layout_constraintEnd_toEndOf="@+id/txtThemeLabel"
            app:layout_constraintStart_toStartOf="@+id/txtThemeLabel"
            app:layout_constraintTop_toBottomOf="@+id/radioGp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
