<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".running.activities.MainActivity">

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:contentDescription="@string/desc_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map_search"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_title"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/imgIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSubLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgIcon"
        app:layout_constraintTop_toBottomOf="@+id/txtLabel" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/desc_help"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textAlignment="center"
        android:textSize="0sp"
        app:icon="@android:drawable/ic_menu_help"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconTint="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/btnNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnNew" />

    <Button
        android:id="@+id/btnTheme"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/desc_theme"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textAlignment="center"
        android:textSize="0sp"
        app:icon="@android:drawable/ic_menu_view"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconTint="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/btnNew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnNew" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_new"

        app:fabCustomSize="80dp"
        app:layout_anchorGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubLabel"
        app:maxImageSize="64dp"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEliminate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNew">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnEliminate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:textColor="@color/text"
        app:layout_anchorGravity="start|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>