<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".running.activities.InputActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCep"
        style="@style/TextInput"
        android:layout_width="196dp"
        android:layout_height="53dp"
        android:hint="@string/hint_in_cep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNome"
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColorHint="#37474F" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/text"
        app:layout_anchorGravity="top|center"
        app:layout_constraintBottom_toBottomOf="@+id/inputCep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputCep"
        app:layout_constraintTop_toTopOf="@+id/inputCep" />

    <TextView
        android:id="@+id/txtCEPResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCep" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/add"
        android:textColor="@color/text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCep" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapFragment"
        android:name="com.aironbruce.registroscep.running.objects.MapsFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        tools:layout="@layout/fragment_maps" />

</androidx.constraintlayout.widget.ConstraintLayout>